--- a/src/views/login.html
+++ b/src/views/login.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Login</h1>
+    <a href="https://slack.com/oauth/v2/authorize?user_scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=1103821555012.1129625575895&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Flogin"><img alt="Sign in with Slack" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>
   </body>
 </html>
