basic slack user info grabbing and display

--- a/src/views/console.html
+++ b/src/views/console.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Index</title>
+    <title>Console</title>
   </head>
   <body>
-    <h1>Index</h1>
-    <a href="/login">Login</a>
+    <h1>Console</h1>
+    <p>Name: <%= slackUser.name %></p>
   </body>
 </html>
