got singular slack status setting working

--- a/src/views/console.html
+++ b/src/views/console.html
@@ -7,5 +7,11 @@
   <body>
     <h1>Console</h1>
     <p>Name: <%= slackUser.name %></p>
+
+    <form method="post">
+      <input type="text" name="emoji" placeholder="Emoji">
+      <input type="text" name="status" placeholder="Status">
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
